--- a/TutorialAndDevGuide/DevGuide/guide.tex
+++ b/TutorialAndDevGuide/DevGuide/guide.tex
@@ -163,6 +163,7 @@ georges-axel.jaloyan@ens.fr\\
 \input{GITdirs}
 \input{CompileCopilot}
 \input{Overview}
+\input{Preprocessing}
 \input{Language}
 \input{PrettyPrinter}
 \input{Core}
