--- a/TutorialAndDevGuide/DevGuide/guide.tex
+++ b/TutorialAndDevGuide/DevGuide/guide.tex
@@ -161,15 +161,25 @@ georges-axel.jaloyan@ens.fr\\
 \vspace{1cm}
 
 \input{GITdirs}
+\pagebreak
 \input{CompileCopilot}
+\pagebreak
 \input{Overview}
+\pagebreak
 \input{Preprocessing}
+\pagebreak
 \input{Language}
+\pagebreak
 \input{PrettyPrinter}
+\pagebreak
 \input{Core}
+\pagebreak
 \input{Interpreter}
+\pagebreak
 \input{Kind}
+\pagebreak
 \input{SBV}
+\pagebreak
 \input{ACSL}
 
 
