--- a/TutorialAndDevGuide/DevGuide/Preprocessing.tex
+++ b/TutorialAndDevGuide/DevGuide/Preprocessing.tex
@@ -1,6 +1,7 @@
 \section{Preprocessing}~\label{sec:preprocessing}
 
 In order to allow us writing constants in capital letters (like PI, DEG, RAD). We decided to use preprocessing that will just expand the values into their real ones (PI into 3.14159265358979323846264338327950). The best language to use for that is m4, given that it is a very powerful preprocessor (Turing complete), in which it is possible to write further features (using an other preprocessor like the C's one would limit a lot the further developments in this field). The detailed manual can be found here : http://www.gnu.org/software/m4/manual/m4.html
+A shorter manual is available here : http://mbreen.com/m4.html 
 
 
 A basic utilization example can also be found in the WCV stuff https://github.com/Copilot-Language/examplesForACSL/blob/master/WCV/main.hs : 
