--- a/TutorialAndDevGuide/DevGuide/guide.tex
+++ b/TutorialAndDevGuide/DevGuide/guide.tex
@@ -157,6 +157,15 @@ georges-axel.jaloyan@ens.fr\\
 }
 \end{center}
 \end{minipage}
+\begin{minipage}{0.3\textwidth}
+\large
+\begin{center}
+Eli Mendelson \\
+\small{
+eli.mendelson@gmail.com\\
+}
+\end{center}
+\end{minipage}
 
 \vspace{1cm}
 
